<resources>
    <string name="app_name">WellBeing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="facebook_app_id">3491966084188275</string>
    <string name="fb_login_protocol_scheme">fb3491966084188275</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="sign_in_header">Already Have an Account?</string>
    <string name="sign_up_header">Want to Create an Account?</string>
    <string name="existing_user_sign_in">Have an account? Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="reenter_password">Reenter Password</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="register">REGISTER</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="content_desc_profile_picture">User profile picture</string>
    <string name="content_desc_like">Like post</string>
    <string name="content_desc_comment">Comment on post</string>
    <string name="content_desc_splash_image">Splash image</string>
    <string name="content_desc_bookings_button">Bookings button</string>
    <string name="content_desc_map_button">Map button</string>
    <string name="content_desc_symptoms_button">Symptoms button</string>
    <string name="content_desc_prescriptions_button">Prescriptions button</string>
    <string name="content_desc_nutrition_button">Nutrition button</string>
    <string name="bookings_button">Bookings</string>
    <string name="map_button">Map</string>
    <string name="symptoms_button">Symptoms</string>
    <string name="nutrition_button">Nutrition</string>
    <string name="orders_button">Orders</string>
    <string name="covid_list_header">COVID-19 Facts</string>
    <string name="covid_list_subheader">Up to date statistics &amp; prevention info</string>
    <string name="things_list_header">Things to Know</string>
    <string name="content_desc_placeholder_image">Placeholder image</string>
    <string name="content_desc_profile_link">Profile link</string>
    <string name="appointments_header">Your\nAppointments</string>
    <string name="title_maps">Maps</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_settings">Settings</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="content_desc_goto_edit_profile">Go to edit profile</string>
    <string name="content_desc_pharmacy_logo">Pharmacy Logo</string>
    <string name="title_orders">Orders</string>
    <string name="title_upload_prescription">Upload Prescription</string>
    <string name="content_desc_upload_prescription_image_area">Upload Prescription image area</string>
    <string name="upload_prescription_prompt">Upload your prescription to tell us what you need\nWe\'ll handle the rest.</string>
    <string name="upload_prescription_title">Order quickly with your prescription</string>
    <string name="upload_prescription_save_20">Save 20%</string>
    <string name="goto_upload_prescription_button">Upload</string>
    <string name="order_categories_title">Category</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_symptoms">Symptoms</string>
    <string name="goto_post_update_prompt">What\'s on your mind?</string>
    <string name="title_post_update">Post Update</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="content_desc_dashboard_item_banner">Dashboard item banner image</string>
    <string name="content_desc_profile_user_name_icon">Profile user name icon</string>
    <string name="content_desc_profile_phone_number_icon">Profile phone number icon</string>
    <string name="content_desc_profile_sex_icon">Profile sex icon</string>
    <string name="content_desc_profile_birth_date_icon">Profile birth date icon</string>
    <string name="lbl_profile_user_name">User name</string>
    <string name="lbl_profile_phone_number">Phone Number</string>
    <string name="lbl_profile_sex">Sex</string>
    <string name="lbl_profile_birth_date">Date of Birth</string>
    <string name="content_desc_send_message_button">Send message button</string>
    <string name="type_message_chat_prompt">Type a Message&#8230;</string>
    <string name="new_post_hint">What\'s on your mind?</string>
    <string name="btn_publish_new_post">Post</string>
    <string name="appointments_empty_placeholder">No appointments scheduled!\nYou can schedule an appointment with the button above.</string>
    <string name="label_upload_prescription_pharmacies_list">Pharmacies</string>
    <string name="upload_prescription_camera">Camera</string>
    <string name="upload_prescription_gallery">Gallery</string>
    <string name="label_upload_prescription">Upload Prescription</string>
    <string name="label_orders_lab_tests">Lab tests</string>
    <string name="label_orders_cosmetics">Cosmetics</string>
    <string name="label_orders_pain_relief">Pain relief</string>
    <string name="label_orders_baby_care">Baby care</string>
    <string name="label_orders_ailment">Ailment</string>
    <string name="label_orders_feminine_hygiene">Feminine Hygiene</string>
    <string name="label_orders_preventative_measures">Preventative measures</string>
    <string name="btn_bookings_schedule_appointment">Schedule a new appointment</string>
    <string name="btn_edit_profile_update_profile">Update Profile</string>
    <string name="dashboard_list_covid_faq">COVID-19 FAQ</string>
    <string name="dashboard_list_covid_statistics">Statistics</string>
    <string name="dashboard_list_covid_prevention">Prevention</string>
    <string name="dashboard_list_covid_treatment">Treatment</string>
    <string name="forgot_password_instructions">Enter the email associated with your account below to reset your password.</string>
    <string-array name="appointment_tabs">
        <item>List</item>
        <item>Map</item>
    </string-array>
</resources>
