<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Account">
        <Preference app:title="Sign Out" android:key="sign_out"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:selectable="false"
            android:summary="We are a team of Pace University students who understand how stressful it can be to seek medical help during a pandemic, which is why we created WellBeing to provide a unique doctor-patient experience from your own smartphone!" />

        <Preference
            android:summary="1.0"
            android:title="Version" />

        <Preference
            android:summary="Have any questions or comments? Let us know!"
            android:title="Send Feedback" />
    </PreferenceCategory>
</PreferenceScreen>
