<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_categories_title"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:isScrollContainer="true">
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_pill_24"
            android:text="@string/label_orders_pain_relief"
            />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/label_orders_cosmetics"
            android:drawableTop="@drawable/ic_makeup_24" />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/label_orders_lab_tests"
            android:drawableTop="@drawable/ic_biotech_white_24dp"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/label_orders_baby_care"
                android:drawableTop="@drawable/ic_child_care_black_24dp"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/label_orders_ailment"
                android:drawableTop="@drawable/ic_sick_white_24dp"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/label_orders_feminine_hygiene"
                android:drawableTop="@drawable/ic_female_24"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/label_orders_preventative_measures"
                android:drawableTop="@drawable/ic_masks_black_24dp"/>
</LinearLayout>
    </HorizontalScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_prescription_title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_prescription_prompt"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_prescription_save_20"
                android:textColor="#008000"/>
                <Button
                    android:id="@+id/btn_goto_upload_prescription"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_bg_dark_blue"
                    android:text="@string/goto_upload_prescription_button"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:layout_marginStart="190dp" />
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
