<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:layout_weight="1">
    <ImageView
        android:id="@+id/prescription_image_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cropToPadding="true"
        android:src="@drawable/ic_photo_camera_white_24dp"
        android:layout_margin="25dp"
        android:background="@drawable/dotted"
        android:contentDescription="@string/content_desc_upload_prescription_image_area" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_upload_prescription"
            android:textColor="#ffffff"
            android:layout_alignBottom="@+id/prescription_image_area"
            android:gravity="center_horizontal"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="16dp"
            android:text="@string/upload_prescription_gallery"
            android:background="@drawable/round_border_blue"
            android:drawableStart="@drawable/ic_photo_library_white_24dp"
            android:drawableTint="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_photo_camera_white_24dp"
            android:padding="16dp"
            android:text="@string/upload_prescription_camera"
            android:drawableTint="@color/colorPrimary"
            android:background="@drawable/round_border_blue"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_upload_prescription_pharmacies_list"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        tools:listitem="@layout/recyclerview_pharmacy_item"/>
</LinearLayout>
